# app/Models/Trips.php
@@ -7,47 +7,16 @@ use Illuminate\Database\Eloquent\Model;
 
 /**
  * @OA\Schema(
- *     schema="Trip",
+ *     schema="Trips",
  *     type="object",
- *     title="Trip",
  *     required={"starting_point", "ending_point", "starting_at", "available_places", "price", "user_id"},
- *     @OA\Property(
- *         property="id",
- *         type="integer",
- *         example=1
- *     ),
- *     @OA\Property(
- *         property="starting_point",
- *         type="string",
- *         example="New York"
- *     ),
- *     @OA\Property(
- *         property="ending_point",
- *         type="string",
- *         example="Los Angeles"
- *     ),
- *     @OA\Property(
- *         property="starting_at",
- *         type="string",
- *         format="date-time",
- *         example="2024-07-22T10:00:00Z"
- *     ),
- *     @OA\Property(
- *         property="available_places",
- *         type="integer",
- *         example=3
- *     ),
- *     @OA\Property(
- *         property="price",
- *         type="number",
- *         format="float",
- *         example=99.99
- *     ),
- *     @OA\Property(
- *         property="user_id",
- *         type="integer",
- *         example=1
- *     )
+ *     @OA\Property(property="id", type="integer", description="ID of the trip"),
+ *     @OA\Property(property="starting_point", type="string", description="Starting point of the trip"),
+ *     @OA\Property(property="ending_point", type="string", description="Ending point of the trip"),
+ *     @OA\Property(property="starting_at", type="string", format="date-time", description="Starting date and time of the trip"),
+ *     @OA\Property(property="available_places", type="integer", description="Number of available places"),
+ *     @OA\Property(property="price", type="number", format="float", description="Price of the trip"),
+ *     @OA\Property(property="user_id", type="integer", description="ID of the user who created the trip")
  * )
  */
 class Trips extends Model
